--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,10 @@
-version: '2.2'
+version: "2.2"
 services:
   redis:
     image: redis:6.0.9
     container_name: redis
+    ports:
+      - 6379:6379
 
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
@@ -10,7 +12,7 @@ services:
     environment:
       - node.name=es01
       - discovery.type=single-node
-      - bootstrap.memory_lock=true
+      # - bootstrap.memory_lock=true
     ulimits:
       memlock:
         soft: -1
