--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     environment:
       - node.name=es01
       - discovery.type=single-node
-      # - bootstrap.memory_lock=true
+      - bootstrap.memory_lock=true
     ulimits:
       memlock:
         soft: -1
